Things do stuff

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
       <h1 class='text-center'>MovieSearch 9000 <small>powered by Angular JS</small></h1>
     </header>
   </div>
-  <nav-search></nav-search>
+
+  <ng-include src="'partials/nav-search.html'"></ng-include>
   <movielist list="searchResult"></movielist>
 </body>
 </html>
