--- a/directives/movielist/movielist.html
+++ b/directives/movielist/movielist.html
@@ -1,12 +1,31 @@
-<div class="col-md-offset-2">
-  <article ng-repeat="item in list" class="row">
-    
-    <div class="col-md-2">
-      <img ng-src="{{item.imageUrl}}" class="imgList">
-    </div>
-    <div class="col-md-8 col-md-offset-2">
+<!-- <div>
+  <div ng-if="list == 'Movie not found!'">
+    <h1>{{list}}</h1>
+  </div> -->
+
+  <div>
+  <article ng-repeat="item in list">
+    <div class="returned-result">
+      <a ng-href="/{{item.id}}/show">
+      <img ng-src="{{item.imageUrl}}" onError="src='/assets/coverunavailable.png'" class="imgList img-responsive">
       <h3 ng-bind="item.title"></h3>
       <h4 ng-bind="item.year"></h4>
     </div>
+    </a>
   </article>
 </div>
+
+</div>
+
+<!-- <div class="row">
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="..." alt="...">
+      <div class="caption">
+        <h3>Thumbnail label</h3>
+        <p>...</p>
+        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+      </div>
+    </div>
+  </div>
+</div> -->
