--- a/directives/search/search.html
+++ b/directives/search/search.html
@@ -1,6 +1,6 @@
 <div class='text-center search-div'>
   <h3>Enter a movie title:</h3>
-  <form class="form-group" name="myForm" novalidate ng-submit="searchForMovies()">
+  <form class="form-group" name="form" novalidate ng-submit="searchForMovies(query)">
     <input type="text" name="title" ng-model="query.title" placeholder="e.g. 'Spicy Chocolatte: The Movie'">
     <button type="submit" class="btn btn-secondary" name="button">Search!</button>
   </form>
